force-app/main/default/objects/Carbon_Credit__c/Carbon_Credit__c.object-meta.xml
<CustomObject>
    <label>Carbon Credit</label>
    <pluralLabel>Carbon Credits</pluralLabel>
    <description>Represents a carbon credit record associated with sustainability projects.</description>
    <nameField>
        <type>Text</type>
        <label>Carbon Credit Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>

    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>0</scale>
    </fields>

    <fields>
        <fullName>Date_Recorded__c</fullName>
        <label>Date Recorded</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Lookup</type>
        <referenceTo>SustainabilityProject__c</referenceTo>
    </fields>
</CustomObject>