force-app/main/default/objects/Carbon_Credit__c/fields/Carbon_Credit_Name__c.field-meta.xml
<CustomField>
    <fullName>Carbon_Credit_Name__c</fullName>
    <label>Carbon Credit Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>