force-app/main/default/objects/Carbon_Credit__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <inlineHelpText>optional</inlineHelpText>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>optional</description>
    <label>Credit Amount</label>
</CustomField>