force-app/main/default/objects/Carbon_Credit__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <type>Date</type>
    <inlineHelpText>optional</inlineHelpText>
    <required>true</required>
    <description>The date when the carbon credit was created or recorded in the system.</description>
    <label>Date Recorded</label>
</CustomField>