force-app/main/default/objects/Carbon_Credit__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <type>LongTextArea</type>
    <length>131072</length>
    <inlineHelpText>optional</inlineHelpText>
    <description>Additional remarks, observations, or audit notes related to the carbon credit.</description>
    <label>Notes</label>
</CustomField>