force-app/main/default/objects/Carbon_Credit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <type>Picklist</type>
    <inlineHelpText>optional</inlineHelpText>
    <required>true</required>
    <description>Status of the carbon credit</description>
    <label>Status</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>