force-app/main/default/objects/Carbon_Credit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <type>Picklist</type>
    <inlineHelpText>optional</inlineHelpText>
    <required>true</required>
    <description>Type of carbon credit</description>
    <label>Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Earned</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>